--- a/src/app/uikit/eventCard/eventCard.module.sass
+++ b/src/app/uikit/eventCard/eventCard.module.sass
@@ -22,8 +22,8 @@
 
     .close
         position: absolute
-        top: -15px
-        right: -15px
+        top: -25px
+        right: -25px
         cursor: pointer
 
 
